unpackaged/objects/Channel__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Number__c</fullName>
        <externalId>true</externalId>
        <label>Channel Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <externalId>true</externalId>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Channel_Number__c</columns>
        <columns>NAME</columns>
        <columns>Nickname__c</columns>
        <columns>Favorite__c</columns>
        <columns>HD__c</columns>
        <columns>Subscribed__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>